# MultiDeskify

./: .gitignore  README.md  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/AddAppModal/: AddAppModal.css  AddAppModal.tsx
src/components/Sidebar/: Sidebar.css  Sidebar.tsx
src/components/Topbar/: Topbar.css  Topbar.tsx
src/components/WebviewStage/: WebviewPanel.lazy.tsx  WebviewPanel.tsx  WebviewStage.css  WebviewStage.tsx
src/store/: useAppStore.ts
src/styles/: globals.css  tokens.css
src/types/: index.ts
src/utils/: id.ts  tauriWebview.ts  url.ts
