[package]
name    = "multideskify"
version = "0.1.0"
edition = "2021"

[lib]
name       = "multideskify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri      = { version = "2", features = ["tray-icon"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
url        = "2"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 4
strip         = true
panic         = "abort"
